Boxes no longer run off screen, but in wrong order and poor spacing.

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -277,6 +277,7 @@ header nav a:last-child {
 
 .top-content {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .text-content {
